<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/fondo_espacio"
    android:padding="@dimen/padding_grande">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_tercera_vista"
        android:textColor="@color/verde_marciano"
        android:textSize="@dimen/text_header"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo_tercera_vista"
        android:textColor="@color/texto_gris_espacial"
        android:textSize="@dimen/text_medium"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_large"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_default_tercera_vista"
        android:textColor="@color/blanco"
        android:textSize="@dimen/text_medium"
        android:textAlignment="center"
        android:background="@color/morado_cosmico"
        android:padding="@dimen/padding_mediano"
        android:layout_marginTop="@dimen/margin_large"/>

    <Button
        android:id="@+id/btnVolverTercera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_volver_inicio"
        android:backgroundTint="@color/rojo_alerta"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_xxlarge"/>

</LinearLayout>